--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <footer>
         <p>
             <a href="https://aurora.live">Aurora Forecast</a> |
-            <a href="http://YOUR_PI_IP:5000/" target="_blank">Camera Admin Panel</a>
+            <a href="http://raspberrypi.local:5000/" target="_blank">Camera Admin Panel</a>
         </p>
     </footer>
     <script>
