--- a/index.html
+++ b/index.html
@@ -1,31 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Colin’s Aurora Cam</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<title>Colin’s Aurora Cam</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
+  /* Reset & base */
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    margin: 0;
+    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+    font-family: 'Montserrat', sans-serif;
+    color: #e0e7ff;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    text-align: center;
+  }
+
+  h1 {
+    margin-top: 2rem;
+    font-weight: 700;
+    font-size: 3rem;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
+    color: #a3cdfd;
+    text-shadow: 0 0 8px #3f9eff;
+  }
+
+  .img-container {
+    margin: 2rem auto 1rem;
+    max-width: 90vw;
+    border-radius: 1rem;
+    overflow: hidden;
+    box-shadow:
+      0 0 20px #1e90ff99,
+      inset 0 0 40px #3ea5ffbb;
+    transition: box-shadow 0.3s ease;
+  }
+  .img-container:hover {
+    box-shadow:
+      0 0 28px #1e90ffcc,
+      inset 0 0 50px #3ea5ffdd;
+  }
+  #aurora-img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 1rem;
+    filter: drop-shadow(0 0 4px #4b9fffaa);
+    transition: filter 0.3s ease;
+  }
+  #aurora-img:hover {
+    filter: drop-shadow(0 0 10px #6cb1ffcc);
+  }
+
+  .caption {
+    font-size: 1.1rem;
+    margin-bottom: 2rem;
+    color: #a8b9d9;
+    font-style: italic;
+  }
+
+  footer {
+    margin-top: auto;
+    padding: 1.5rem 1rem;
+    background: rgba(32, 58, 67, 0.5);
+    color: #8ab4f8;
+    font-size: 0.95rem;
+    user-select: none;
+  }
+  footer a {
+    color: #a3cdfd;
+    text-decoration: none;
+    margin: 0 0.6rem;
+    transition: color 0.2s ease;
+  }
+  footer a:hover,
+  footer a:focus {
+    color: #d1e9ff;
+    text-decoration: underline;
+  }
+
+  /* Responsive tweaks */
+  @media (max-width: 480px) {
+    h1 {
+      font-size: 2rem;
+      letter-spacing: 0.1em;
+    }
+    .caption {
+      font-size: 1rem;
+      margin-bottom: 1.5rem;
+    }
+  }
+</style>
 </head>
 <body>
-    <h1>Colin’s Aurora Cam</h1>
-    <div class="img-container">
-        <img id="aurora-img" src="latest.jpg?ts=0" alt="Latest Aurora Image">
-    </div>
-    <div class="caption">Image updates every 12 seconds.</div>
-    <footer>
-        <p>
-            <a href="https://aurora.live">Aurora Forecast</a> |
-            <a href="http://raspberrypi.local:5000/" target="_blank">Camera Admin Panel</a>
-        </p>
-    </footer>
-    <script>
-        function refreshImage() {
-            var img = document.getElementById('aurora-img');
-            var ts = new Date().getTime();
-            img.src = 'latest.jpg?ts=' + ts;
-        }
-        setInterval(refreshImage, 12000);
-        window.onload = refreshImage;
-    </script>
+  <h1>Colin’s Aurora Cam</h1>
+
+  <div class="img-container" aria-label="Latest aurora photo from camera">
+    <img id="aurora-img" src="latest.jpg?ts=0" alt="Latest Aurora Image" />
+  </div>
+
+  <div class="caption">Image updates every 12 seconds.</div>
+
+  <footer>
+    <a href="https://aurora.live" target="_blank" rel="noopener noreferrer">Aurora Forecast</a> |
+    <a href="http://raspberrypi.local:5000/" target="_blank" rel="noopener noreferrer">Camera Admin Panel</a>
+  </footer>
+
+  <script>
+    function refreshImage() {
+      const img = document.getElementById('aurora-img');
+      const timestamp = new Date().getTime();
+      img.src = 'latest.jpg?ts=' + timestamp;
+    }
+    setInterval(refreshImage, 12000);
+    window.onload = refreshImage;
+  </script>
 </body>
 </html>
