--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <div class="caption">Image updates every 12 seconds.</div>
 
   <footer>
-    <a href="https://aurora.live" target="_blank" rel="noopener noreferrer">Aurora Forecast</a> |
+    <a href="https://www.swpc.noaa.gov/products/aurora-viewline-tonight-and-tomorrow-night-experimental" target="_blank" rel="noopener noreferrer">Aurora Forecast</a> |
     <a href="http://raspberrypi.local:5000/" target="_blank" rel="noopener noreferrer">Camera Admin Panel</a>
   </footer>
 
